[package]
name = "webarchive"
version = "0.1.0"
authors = ["Jessica Stokes <hello@jessicastokes.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plist = "1.0"
ruma-serde = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
