[package]
name = "webarchive"
description = "Utilities for working with Apple's Web Archive file format"
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Jessica Stokes <hello@jessicastokes.net>"]
homepage = "https://github.com/ticky/webarchive"
repository = "https://github.com/ticky/webarchive.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
mime_guess = "2.0"
plist = "1.0"
ruma-serde = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
structopt = "0.3"
url = "2.1.1"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
