[package]
name = "webarchive"
description = "Utilities for working with Apple's Web Archive file format"
version = "0.2.1"
license = "MIT OR Apache-2.0"
authors = ["Jessica Stokes <hello@jessicastokes.net>"]
homepage = "https://github.com/ticky/webarchive"
repository = "https://github.com/ticky/webarchive.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
mime_guess = "2.0"
plist = "1.0"
ruma-serde = "0.6"
serde = "1.0"
serde_bytes = "0.11"
url = "2.1"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
